--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         }
 
         p {
-            font-family: Beon
+            font-family: Helvetica
         }
 
         h3 {
@@ -40,7 +40,7 @@
         }
 
         li {
-            font-family: Beon;
+            font-family: Helvetica;
             list-style-position: inside;
         }
 
@@ -66,34 +66,75 @@
 </head>
 
 <body>
+    <center>
     <h1>Welcome to Bordel Hackerspace</h1>
-    <h2>Bordel has been reborn in a new space in Prague</h2>
+    <h2>Bordel is being reborn in Prague</h2>
     <h3>Transforming chaos into shared creations</h3>
-
+     </center>
     <p>
-        Bordel is a small community hackerspace originally opened in <a
-            href="https://g.page/paralelnipolis?share">Paralelni Polis</a>. After 3 years of succesfully building
-        community, organizing workshops, hackatons and parties, we are moving to a new independent space.</p>
+        Bordel is a small community hackerspace originally opened in <a href="https://g.page/paralelnipolis?share">Paralelni Polis</a>. After 3 years of succesfully building
+        community, projects, organizing workshops, hackatons and parties, we are moving to a new independent space.</p>
 
     <p>
         Prague has a vibrant community which resonates with Bordel Hackerspace values and mission. Project is only
         starting and we are looking for fellow minded indviduals interested in joining our efforts.</p>
+
+    <h3> What will you find here?</h3>
     <p>
         Bordel provides a community space for hackers, makers and everybody who likes to embrace chaos. Specifically,
         the space should provide:
     <p>
     <ul>
-        <li>Coworking with stable and flexible tables for anyone looking for a chill space to hack from</li>
-        <li>Makerspace providing necessary tools for all kinds projects, 3D printers, soldering, etc</li>
+        <li>Communal space and coworking space for hacking, working, events and chill</li>
+        <li>Makerspace providing necessary tools for all kinds projects, arts, hardware or software</li>
+        <li>Audio setup with speakers, sub, DJ controller, synths and other kinds of equipment for musicians jams and parties</li>
         <li>Bar to serve Mate (and maybe other drinks) for donations to support the space</li>
-        <li>Audio setup with speakers, sub, DJ controller, synths and other kinds of equipment for jams and parties</li>
         <li>Space for community meetups and workshops, open to public or private events</li>
         <li>Anything else you'd like! It's a doocracy so anything you bring goes. Let us know in the form below how
             would you like to use the space</li>
     </ul>
+    </p> 
+
+    <h3> What we already built before?</h3>
+
+    <p> The original Bordel was a small space with relatively small but very community and many visitors. Our members contributed to bunch of cool projects and organized a ton of events for art and education. We have...
+    </p>
+
+    <ul>
+        <li> built <a href=https://proofof.cat>Catropy</a>, a cat toy device for extracting secure entropy from felines used to secure cryptography in KZG ceremony</li>
+        <li> created the very first Bitcoin Lightning NFC payments and pioneered the technology
+        </li>
+        <li> created an art installation from upcycled hardware and cartridges 
+        </li>
+        <li> built Bleskomat, first offline Bitcoin Lightning ATM using LNURL and helped to onboard hundreds of people
+        </li>
+        <li> hosted FOSS software for the community, providing a privacy respecting alternative to proprietary services 
+        </li>
+        <li> hosted nodes and tools for various blockchains, including mixers 
+        </li>
+        <li> organized music events Synapse, hosting local artists and DJs 
+        </li>
+        <li> hosted a coordination for testing Ethereum switch to proof of stake
+        </li>
+        <li> organized workshops on 3D printing and creative prototyping 
+        </li>
+        <li> workshops on biology and sustainability, growing mycelium in the space
+        </li>
+        <li> workshops on neopixel, art with programmable LED lights
+        </li>
+        <li> Security/privacy workshops, installing GrapheneOS, GNU/Linux 
+        </li>
+        <li> workshop on hacking Playstation and liberating hardware
+        </li>
+        <li> organized non-conformist hackatons Hackatoshi's <a href=flyingcircuit.com>Flying Circuity</a>
+        </li>
+        <li> workshops on hacking self defense tools 
+        </li>
+
+    </ul>
 
     <p>
-        Combining all of the above, Bordel space creates a unique atmosphere for creativity, hacking and relax. We
+        And even more! Combining all of the above, Bordel space creates a unique atmosphere for creativity, hacking and relax. We
         welcome everybody from all kinds of communities to join us and use the space.
     </p>
     <p>
@@ -105,9 +146,9 @@
         If we got you interested in any way and you'd like to contribute the space or support us, please check out
         the form below and let us know about yourself.
     </p>
-
-    <h2>Interest Form</h2>
+    <center>
+    <h2><a href=https://cryptpad.cz/form/#/2/form/view/yDFYVV0i6xp7IeaxJeP2duHvklaRR+u5wJz1WFqt3iA>Interest Form</a></h2>
 
     <a href="https://new.bordel.wtf/"> <img src="./bordel.png" alt="" style="width: 45%; height: auto;"> </a>
-
+    </center>
 </body>
