--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
         </li>
         <li> hosted a coordination for testing Ethereum switch to proof of stake
         </li>
+        <li>
+            created an <a href="https://play.workadventu.re/_/global/bordel.github.io/workadvanture-bordel/map.json">online 2D hackerspace</a> to for events during covid and remotely
+        </li>
         <li> organized workshops on 3D printing and creative prototyping 
         </li>
         <li> workshops on biology and sustainability, growing mycelium in the space
@@ -126,7 +129,7 @@
         </li>
         <li> workshop on hacking Playstation and liberating hardware
         </li>
-        <li> organized non-conformist hackatons Hackatoshi's <a href=flyingcircuit.com>Flying Circuity</a>
+        <li> organized non-conformist hackatons Hackatoshi's <a href=flyingcircuit.com>Flying Circuit</a>
         </li>
         <li> workshops on hacking self defense tools 
         </li>
@@ -137,6 +140,8 @@
         And even more! Combining all of the above, Bordel space creates a unique atmosphere for creativity, hacking and relax. We
         welcome everybody from all kinds of communities to join us and use the space.
     </p>
+
+    <h3>Help us get started!</h3>
     <p>
         The governance is based around do-ocracy, therefore anybody willing to contribute ends up deciding what
         happens in the space. Especially in this initial phase we want to hear from you, the community, how would
@@ -146,9 +151,15 @@
         If we got you interested in any way and you'd like to contribute the space or support us, please check out
         the form below and let us know about yourself.
     </p>
+    
+    <p>
+        To fund the new space, we are pioneering a decentralized crowdfunded loan! Learn more at <a href=https://cryptpad.cz/pad/#/2/pad/view/GxUis15v0eZuAbOFYpPIYSb+ZjEAS-nKdYBquz3-CPY>blog.bordel.wtf</a>
+    </p>
+
     <center>
     <h2><a href=https://cryptpad.cz/form/#/2/form/view/yDFYVV0i6xp7IeaxJeP2duHvklaRR+u5wJz1WFqt3iA>Interest Form</a></h2>
 
     <a href="https://new.bordel.wtf/"> <img src="./bordel.png" alt="" style="width: 45%; height: auto;"> </a>
     </center>
+
 </body>
