--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         }
 
         p {
-            font-family: Helvetica
+            font-family: Beon
         }
 
         h3 {
@@ -40,7 +40,7 @@
         }
 
         li {
-            font-family: Helvetica;
+            font-family: Beon;
             list-style-position: inside;
         }
 
@@ -66,100 +66,101 @@
 </head>
 
 <body>
-    <center>
-    <h1>Welcome to Bordel Hackerspace</h1>
-    <h2>Bordel is being reborn in Prague</h2>
-    <h3>Transforming chaos into shared creations</h3>
-     </center>
-    <p>
-        Bordel is a small community hackerspace originally opened in <a href="https://g.page/paralelnipolis?share">Paralelni Polis</a>. After 3 years of succesfully building
-        community, projects, organizing workshops, hackatons and parties, we are moving to a new independent space.</p>
+    <h1>Welcome to BORDEL</h1>
+    <h2>Transforming Chaos into Shared Creations</h2>
 
     <p>
-        Prague has a vibrant community which resonates with Bordel Hackerspace values and mission. Project is only
-        starting and we are looking for fellow minded indviduals interested in joining our efforts.</p>
-
-    <h3> What will you find here?</h3>
-    <p>
-        Bordel provides a community space for hackers, makers and everybody who likes to embrace chaos. Specifically,
-        the space should provide:
-    <p>
-    <ul>
-        <li>Communal space and coworking space for hacking, working, events and chill</li>
-        <li>Makerspace providing necessary tools for all kinds projects, arts, hardware or software</li>
-        <li>Audio setup with speakers, sub, DJ controller, synths and other kinds of equipment for musicians jams and parties</li>
-        <li>Bar to serve Mate (and maybe other drinks) for donations to support the space</li>
-        <li>Space for community meetups and workshops, open to public or private events</li>
-        <li>Anything else you'd like! It's a doocracy so anything you bring goes. Let us know in the form below how
-            would you like to use the space</li>
-    </ul>
-    </p> 
-
-    <h3> What we already built before?</h3>
-
-    <p> The original Bordel was a small space with relatively small but very community and many visitors. Our members contributed to bunch of cool projects and organized a ton of events for art and education. We have...
+        In it's most basic form, you can see Bordel as a community sanctuary for hackers, makers, artists, and anyone who embraces (peaceful/productive) chaos, creativity or technology.
     </p>
 
-    <ul>
-        <li> built <a href=https://proofof.cat>Catropy</a>, a cat toy device for extracting secure entropy from felines used to secure cryptography in KZG ceremony</li>
-        <li> created the very first Bitcoin Lightning NFC payments and pioneered the technology
-        </li>
-        <li> created an art installation from upcycled hardware and cartridges 
-        </li>
-        <li> built Bleskomat, first offline Bitcoin Lightning ATM using LNURL and helped to onboard hundreds of people
-        </li>
-        <li> hosted FOSS software for the community, providing a privacy respecting alternative to proprietary services 
-        </li>
-        <li> hosted nodes and tools for various blockchains, including mixers 
-        </li>
-        <li> organized music events Synapse, hosting local artists and DJs 
-        </li>
-        <li> hosted a coordination for testing Ethereum switch to proof of stake
-        </li>
-        <li>
-            created an <a href="https://play.workadventu.re/_/global/bordel.github.io/workadvanture-bordel/map.json">online 2D hackerspace</a> to for events during covid and remotely
-        </li>
-        <li> organized workshops on 3D printing and creative prototyping 
-        </li>
-        <li> workshops on biology and sustainability, growing mycelium in the space
-        </li>
-        <li> workshops on neopixel, art with programmable LED lights
-        </li>
-        <li> Security/privacy workshops, installing GrapheneOS, GNU/Linux 
-        </li>
-        <li> workshop on hacking Playstation and liberating hardware
-        </li>
-        <li> organized non-conformist hackatons Hackatoshi's <a href=flyingcircuit.com>Flying Circuit</a>
-        </li>
-        <li> workshops on hacking self defense tools 
-        </li>
+    <p>
+        Our vision is to create a space that connects technology and art, an environment where nonconformists can find their tribe to learn and grow together. Bordel welcomes the pathologically curious to come together to create, hack, learn, innovate and build community.
+    </p>
 
+    <p>
+        BORDEL is not just a physical space but a provocation where creative expression collides in a deliberate chaos. Its core wonders happen when people come together in an environment where open-mindedness, curiosity, being aware and discovery unfold in a playful manner. A place where members open up to question every reality, seek more experiences and knowledge, and share their thoughts with each other.
+    </p>
+
+    <p>
+        In a world that demands specialization, we choose integration. In a culture that rewards conformity, we celebrate divergence. In times that push for acceleration, we create space for reflection.
+    </p>
+
+    <p>
+        Step beyond the boundaries of what you know. Discover the questions you haven't yet thought to ask. Find your people—not those who mirror your certainties, but those who challenge them with authentic curiosity and genuine care. Come to us not to escape reality, but to create a new one.
+    </p>
+
+    <h3>Support Our Mission</h3>
+
+    <p>
+        After three years incubating our collective madness at Paralelni Polis, building community, organizing workshops, hackathons, art projects and raves, we are moving to a new independent space in Prague.
+    </p>
+
+    <p>
+        As we transition to our new location, we're seeking financial support for the start. Bordel is non-profit collective. By participating in our loan initiative, you can help us build this space while still receiving annual percentage rate (APR) on your money. Although the APR might be lower than other investment options, your contribution will directly support the growth of a community-focused hub for creativity and technology.
+    </p>
+
+    <p>
+        If you believe in the importance of collaboration and open-source principles, we invite you to lend your support.
+    </p>
+
+    <p>
+        <a href="https://bordel.pwn.xyz">Lend now</a>
+    </p>
+
+    <h3>A Space for Everyone</h3>
+    <p>
+        Bordel Hackerspace is designed to be versatile and welcoming, catering to a variety of activities, including:
+    </p>
+    <ul>
+        <li>Co-working Spaces: Comfortable areas with stable tables for everyone looking to get things done.</li>
+        <li>Makerspace: Fully equipped with tools for various projects — 3D printers, soldering stations, and more.</li>
+        <li>Community Bar: Offering Mate, Kombucha, and smoothies — all donations help support the space.</li>
+        <li>Audio Setup: Featuring speakers, a DJ controller, synths, and equipment for casual jams and events.</li>
+        <li>Workshops and Meetups: An open area for community gatherings and workshops, whether public or private.</li>
     </ul>
 
     <p>
-        And even more! Combining all of the above, Bordel space creates a unique atmosphere for creativity, hacking and relax. We
-        welcome everybody from all kinds of communities to join us and use the space.
+        We operate on a do-ocracy principle, meaning that everyone's input is valued. We want to hear your ideas on how you'd like to utilize this space.
     </p>
 
-    <h3>Help us get started!</h3>
+    <h3>A Glimpse at Our Activities</h3>
     <p>
-        The governance is based around do-ocracy, therefore anybody willing to contribute ends up deciding what
-        happens in the space. Especially in this initial phase we want to hear from you, the community, how would
-        you like to use the space.
-    <p>
-    <p>
-        If we got you interested in any way and you'd like to contribute the space or support us, please check out
-        the form below and let us know about yourself.
+        The original was a small space with relatively small but very community and many visitors. Our members contributed to bunch of cool projects and organized a ton of events for art and education. We...
     </p>
-    
+    <ul>
+        <li>built <a href="https://proofof.cat">Catropy</a>, a cat toy device for extracting secure entropy from felines used to secure cryptography in KZG ceremony</li>
+        <li>created the very first Bitcoin Lightning NFC payments and pioneered the technology</li>
+        <li>created an art installation from upcycled hardware and cartridges</li>
+        <li>built Bleskomat, first offline Bitcoin Lightning ATM using LNURL and helped to onboard hundreds of people</li>
+        <li>hosted FOSS software for the community, providing a privacy respecting alternative to proprietary services</li>
+        <li>hosted nodes and tools for various blockchains, including mixers</li>
+        <li>organized music events Synapse, hosting local artists and DJs</li>
+        <li>hosted a coordination for testing Ethereum switch to proof of stake</li>
+        <li>organized workshops on 3D printing and creative prototyping</li>
+        <li>workshops on biology and sustainability, growing mycelium in the space</li>
+        <li>workshops on neopixel, art with programmable LED lights</li>
+        <li>Security/privacy workshops, installing GrapheneOS, GNU/Linux</li>
+        <li>workshop on hacking Playstation and liberating hardware</li>
+        <li>organized non-conformist hackatons <a href="http://flyingcircuit.com">Hackatoshi's Flying Circuity</a></li>
+        <li>workshops on hacking self defense tools</li>
+        <li>and even more!</li>
+    </ul>
+
     <p>
-        To fund the new space, we are pioneering a decentralized crowdfunded loan! Learn more at <a href=https://cryptpad.cz/pad/#/2/pad/view/GxUis15v0eZuAbOFYpPIYSb+ZjEAS-nKdYBquz3-CPY>blog.bordel.wtf</a>
+        We're always open to new ideas and activities from realm of art, technology and whatever else comes to your mind!
     </p>
 
-    <center>
-    <h2><a href=https://cryptpad.cz/form/#/2/form/view/yDFYVV0i6xp7IeaxJeP2duHvklaRR+u5wJz1WFqt3iA>Interest Form</a></h2>
+    <h3>Get Involved!</h3>
+    <p>
+        If you're interested in what we do and want to contribute your skills, ideas, or resources, please reach out using the form below. We welcome everyone to join us in shaping the future of Bordel Hackerspace.
+    </p>
+
+    <p>
+        Let's create something amazing together!
+    </p>
+
+    <h2>Interest Form</h2>
 
     <a href="https://new.bordel.wtf/"> <img src="./bordel.png" alt="" style="width: 45%; height: auto;"> </a>
-    </center>
 
 </body>
