--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <head>
+    <link rel="stylesheet" href="styles.css">
     <title>Bordel Hackerspace</title>
     <meta name="title" content="Bordel Hackerspace">
     <meta name="description" content="Bordel Hackerspace in Prague" />
@@ -67,40 +68,68 @@
 
 <body>
     <center>
-    <h1>Welcome to Bordel Hackerspace</h1>
-    <h2>Bordel is being reborn in Prague</h2>
-    <h3>Transforming chaos into shared creations</h3>
+    <h1>BORDEL</h1>
+    <h2>Transforming chaos into shared creations</h2>
      </center>
-    <p>
-        Bordel is a small community hackerspace originally opened in <a href="https://g.page/paralelnipolis?share">Paralelni Polis</a>. After 3 years of succesfully building
-        community, projects, organizing workshops, hackatons and parties, we are moving to a new independent space.</p>
 
+    <h3>What We Are, Why We Exist, and Our Vision</h3>
     <p>
-        Prague has a vibrant community which resonates with Bordel Hackerspace values and mission. Project is only
-        starting and we are looking for fellow minded indviduals interested in joining our efforts.</p>
+        In it's most basic form, you can see Bordel as a community sanctuary for hackers, makers, artists, and anyone who embraces (peaceful/productive) chaos, creativity or technology. </p>
+        <br><p>
+        Our vision is to create a space that connects technology and art, an environment where nonconformists can find their tribe to learn and grow together. Bordel welcomes the pathologically curious to come together to create, hack, learn, innovate and build community.
+    </p>
+    <br>
+    <p>
+        BORDEL is not just a physical space but a provocation where creative expression collides in a deliberate chaos. Its core wonders happen when people come together in an environment where open-mindedness, curiosity, being aware and discovery unfold in a playful manner. A place where members open up to question every reality, seek more experiences and knowledge, and share their thoughts with each other.
+    </p>
+    <br>
+    <p>
+        In a world that demands specialization, we choose integration. In a culture that rewards conformity, we celebrate divergence. In times that push for acceleration, we create space for reflection.
+    </p>
+    <br>
+    <p>
+        Step beyond the boundaries of what you know. Discover the questions you haven't yet thought to ask. Find your people—not those who mirror your certainties, but those who challenge them with authentic curiosity and genuine care Come to us not to escape reality, but to create a new one.
+    </p>
 
-    <h3> What will you find here?</h3>
-    <p>
-        Bordel provides a community space for hackers, makers and everybody who likes to embrace chaos. Specifically,
-        the space should provide:
-    <p>
-    <ul>
-        <li>Communal space and coworking space for hacking, working, events and chill</li>
-        <li>Makerspace providing necessary tools for all kinds projects, arts, hardware or software</li>
-        <li>Audio setup with speakers, sub, DJ controller, synths and other kinds of equipment for musicians jams and parties</li>
-        <li>Bar to serve Mate (and maybe other drinks) for donations to support the space</li>
-        <li>Space for community meetups and workshops, open to public or private events</li>
-        <li>Anything else you'd like! It's a doocracy so anything you bring goes. Let us know in the form below how
-            would you like to use the space</li>
+    <h3 class="text-right">A Space for Everyone</h3>
+    <p class="text-right">
+        Bordel Hackerspace is designed to be versatile and welcoming, catering to a variety of activities, including:
+    </p>
+    <ul class="ul-without-dots margin-left-20 padding-top-2">
+        <li class="padding-top-2">
+            <h4>Co-working Spaces</h4>
+            <p class="margin-left-10">
+                Comfortable areas with stable tables for everyone looking to get things done.
+            </p>
+        </li>
+        <li class="text-wrap padding-top-2">
+            <h4>Makerspace</h4>
+            <p class="margin-left-10">Fully equipped with tools for various projects — 3D printers, soldering stations, and more.</li>
+        <li class="text-wrap padding-top-2">
+            <h4>Community Bar</h4>
+            <p class="margin-left-10">Offering Mate, Kombucha, and smoothies — all donations help support the space.</p>
+        </li>
+        <li class="text-wrap padding-top-2">
+            <h4>Audio Setup</h4>
+            <p class="margin-left-10">Featuring speakers, a DJ controller, synths, and equipment for casual jams and events.</p>
+        </li>
+        <li class="text-wrap padding-top-2">
+            <h4>Workshops and Meetups</h4>
+            <p class="margin-left-10">An open area for community gatherings and workshops, whether public or private.</p>
+        </li>
+        <li class="text-wrap padding-top-2">
+            <p>We operate on a do-ocracy principle, meaning that everyone’s input is valued. We want to hear your ideas on how you’d like to utilize this space.</p>
+        </li>
     </ul>
     </p> 
 
-    <h3> What we already built before?</h3>
+    <h3>A Glimpse at Our Activities</h3>
 
-    <p> The original Bordel was a small space with relatively small but very community and many visitors. Our members contributed to bunch of cool projects and organized a ton of events for art and education. We have...
+    <p>
+        The original was a small space with relatively small but very community and many visitors. Our members contributed to bunch of cool projects and organized a ton of events for art and education. We...
     </p>
 
-    <ul>
+    <ul class="padding-top-2">
         <li> built <a href=https://proofof.cat>Catropy</a>, a cat toy device for extracting secure entropy from felines used to secure cryptography in KZG ceremony</li>
         <li> created the very first Bitcoin Lightning NFC payments and pioneered the technology
         </li>
@@ -136,28 +165,29 @@
 
     </ul>
 
-    <p>
+    <p class="padding-top-2">
         And even more! Combining all of the above, Bordel space creates a unique atmosphere for creativity, hacking and relax. We
         welcome everybody from all kinds of communities to join us and use the space.
     </p>
 
-    <h3>Help us get started!</h3>
+    <h3 class="text-center">Get Involved!</h3>
     <p>
-        The governance is based around do-ocracy, therefore anybody willing to contribute ends up deciding what
-        happens in the space. Especially in this initial phase we want to hear from you, the community, how would
-        you like to use the space.
+        If you're interested in what we do and want to contribute your skills, ideas, or resources, please reach out using the form below. We welcome everyone to join us in shaping the future of Bordel Hackerspace.
     <p>
-    <p>
-        If we got you interested in any way and you'd like to contribute the space or support us, please check out
-        the form below and let us know about yourself.
+    <br>
+    <p class="text-center">
+        Let’s create something amazing together!
     </p>
     
-    <p>
+    <p class="text-center">
         To fund the new space, we are pioneering a decentralized crowdfunded loan! Learn more at <a href=https://cryptpad.cz/pad/#/2/pad/view/GxUis15v0eZuAbOFYpPIYSb+ZjEAS-nKdYBquz3-CPY>blog.bordel.wtf</a>
     </p>
 
     <center>
-    <h2><a href=https://cryptpad.cz/form/#/2/form/view/yDFYVV0i6xp7IeaxJeP2duHvklaRR+u5wJz1WFqt3iA>Interest Form</a></h2>
+    <h2 class="padding-top-2">
+        <a href=https://cryptpad.cz/form/#/2/form/view/yDFYVV0i6xp7IeaxJeP2duHvklaRR+u5wJz1WFqt3iA>Interest Form
+        </a>
+    </h2>
 
     <a href="https://new.bordel.wtf/"> <img src="./bordel.png" alt="" style="width: 45%; height: auto;"> </a>
     </center>
