--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <link rel="stylesheet" href="styles.css">
+
     <title>Bordel Hackerspace</title>
     <meta name="title" content="Bordel Hackerspace">
     <meta name="description" content="Bordel Hackerspace in Prague" />
@@ -36,19 +37,20 @@
             font-family: Beon
         }
 
+        h4 {
+            font-family: Beon
+        }
+
         h2 {
             font-family: Beon
         }
 
         li {
             font-family: Helvetica;
-            list-style-position: inside;
         }
 
         body {
-            padding: 25px;
-            background-color: black;
-            color: #0f0;
+            background-color: #111111;
             font-size: 25px;
         }
 
@@ -56,6 +58,7 @@
             color: red;
             background-color: transparent;
             text-decoration: none;
+            font-family: Beon;
         }
 
         a:visited {
@@ -64,15 +67,27 @@
             text-decoration: none;
         }
     </style>
+<!--    <script src="script.js"></script>-->
 </head>
 
 <body>
-    <center>
-    <h1>BORDEL</h1>
-    <h2>Transforming chaos into shared creations</h2>
-     </center>
+<!--<script src="script.js"></script>-->
 
-    <h3>What We Are, Why We Exist, and Our Vision</h3>
+<header class="d-flex sticky-header">
+    <a href="#home" class="font-color-green">BORDEL</a>
+    <nav class="d-flex flex-gap-1">
+        <a href="#about">ABOUT</a>
+        <a href="#joinUs">JOIN US</a>
+    </nav>
+</header>
+
+<canvas style="position: fixed" id="canvas">Canvas is not supported in your browser.</canvas>
+<canvas style="position: fixed" id="canvas2">Canvas is not supported in your browser.</canvas>
+<div id="home" class="container-body">
+    <h1 class="text-center font-color-green">BORDEL</h1>
+    <h2 class="text-center">Transforming chaos into shared creations</h2>
+
+    <h3 id="about" class="padding-top-8 font-color-green">What We Are, Why We Exist, and Our Vision</h3>
     <p>
         In it's most basic form, you can see Bordel as a community sanctuary for hackers, makers, artists, and anyone who embraces (peaceful/productive) chaos, creativity or technology. </p>
         <br><p>
@@ -88,80 +103,127 @@
     </p>
     <br>
     <p>
-        Step beyond the boundaries of what you know. Discover the questions you haven't yet thought to ask. Find your people—not those who mirror your certainties, but those who challenge them with authentic curiosity and genuine care Come to us not to escape reality, but to create a new one.
+        Step beyond the boundaries of what you know. Discover the questions you haven't yet thought to ask. Find your people&#45;not those who mirror your certainties, but those who challenge them with authentic curiosity and genuine care Come to us not to escape reality, but to create a new one.
     </p>
 
-    <h3 class="text-right">A Space for Everyone</h3>
-    <p class="text-right">
+    <h3 class="text-center padding-top-8 font-color-green">SPACE FOR EVERYONE</h3>
+    <p class="text-center">
         Bordel Hackerspace is designed to be versatile and welcoming, catering to a variety of activities, including:
     </p>
-    <ul class="ul-without-dots margin-left-20 padding-top-2">
-        <li class="padding-top-2">
-            <h4>Co-working Spaces</h4>
-            <p class="margin-left-10">
-                Comfortable areas with stable tables for everyone looking to get things done.
-            </p>
+    <ul class="ul-without-dots padding-top-2">
+        <li>
+            <div class="d-flex">
+                <div class="width-50-percent li-div-text">
+                    <h4 class="font-color-green">Co-working Spaces</h4>
+                    <p>
+                        Comfortable areas with stable tables for everyone looking to get things done.
+                    </p>
+                </div>
+
+                <div class="width-50-percent d-flex justify-content-right">
+                    <img class="width-20-rem" src="./assets/images/coworking.png" alt="club-mate" />
+                </div>
+            </div>
         </li>
-        <li class="text-wrap padding-top-2">
-            <h4>Makerspace</h4>
-            <p class="margin-left-10">Fully equipped with tools for various projects — 3D printers, soldering stations, and more.</li>
-        <li class="text-wrap padding-top-2">
-            <h4>Community Bar</h4>
-            <p class="margin-left-10">Offering Mate, Kombucha, and smoothies — all donations help support the space.</p>
+
+        <li class="li-right">
+            <div class="d-flex">
+                <div class="width-50-percent li-div-text text-right">
+                    <h4 class="font-color-green">Makerspace</h4>
+                    <p>Fully equipped with tools for various projects &#45; 3D printers, soldering stations, and more.</p>
+                </div>
+                <div class="d-flex justify-content-left">
+                    <img class="width-20-rem" src="./assets/images/make.png" alt="club-mate" />
+                </div>
+            </div>
         </li>
-        <li class="text-wrap padding-top-2">
-            <h4>Audio Setup</h4>
-            <p class="margin-left-10">Featuring speakers, a DJ controller, synths, and equipment for casual jams and events.</p>
+        <li class="text-wrap">
+            <div class="d-flex">
+                <div class="width-50-percent li-div-text">
+                    <h4 class="font-color-green">Community Bar</h4>
+                    <p>Offering Mate, Kombucha, and smoothies &#45; all donations help support the space.</p>
+                </div>
+                <div class="width-50-percent d-flex justify-content-right">
+                    <img class="width-20-rem" src="./assets/images/Screenshot from 2025-03-07 19-59-09 1.png" alt="club-mate" />
+                </div>
+            </div>
         </li>
-        <li class="text-wrap padding-top-2">
-            <h4>Workshops and Meetups</h4>
-            <p class="margin-left-10">An open area for community gatherings and workshops, whether public or private.</p>
+        <li class="li-right">
+            <div class="d-flex">
+                <div class="width-50-percent li-div-text text-right">
+                    <h4 class="font-color-green">Audio Setup</h4>
+                    <p>Featuring speakers, a DJ controller, synths, and equipment for casual jams and events.</p>
+                </div>
+                <div class="d-flex justify-content-left">
+                    <img class="width-20-rem" src="./assets/images/audio.png" alt="club-mate" />
+                </div>
+            </div>
         </li>
-        <li class="text-wrap padding-top-2">
-            <p>We operate on a do-ocracy principle, meaning that everyone’s input is valued. We want to hear your ideas on how you’d like to utilize this space.</p>
+        <li class="text-wrap">
+            <div class="d-flex">
+                <div class="width-50-percent li-div-text">
+                    <h4 class="font-color-green">Workshops and Meetups</h4>
+                    <p>An open area for community gatherings and workshops, whether public or private.</p>
+                </div>
+                <div class="width-50-percent d-flex justify-content-right">
+                    <img class="width-20-rem" src="./assets/images/workshop.png" alt="club-mate" />
+                </div>
+            </div>
+
+        </li>
+        <li class="text-wrap padding-top-3">
+            <p>We operate on a do-ocracy principle, meaning that everyone&apos;s input is valued. We want to hear your ideas on how you&apos;d like to utilize this space.</p>
         </li>
     </ul>
-    </p> 
 
-    <h3>A Glimpse at Our Activities</h3>
+
+    <h3 class="text-center padding-top-8 font-color-green">A GLIMPSE AT OUR ACTIVITIES</h3>
 
     <p>
         The original was a small space with relatively small but very community and many visitors. Our members contributed to bunch of cool projects and organized a ton of events for art and education. We...
     </p>
 
-    <ul class="padding-top-2">
-        <li> built <a href=https://proofof.cat>Catropy</a>, a cat toy device for extracting secure entropy from felines used to secure cryptography in KZG ceremony</li>
-        <li> created the very first Bitcoin Lightning NFC payments and pioneered the technology
-        </li>
-        <li> created an art installation from upcycled hardware and cartridges 
-        </li>
-        <li> built Bleskomat, first offline Bitcoin Lightning ATM using LNURL and helped to onboard hundreds of people
-        </li>
-        <li> hosted FOSS software for the community, providing a privacy respecting alternative to proprietary services 
-        </li>
-        <li> hosted nodes and tools for various blockchains, including mixers 
-        </li>
-        <li> organized music events Synapse, hosting local artists and DJs 
-        </li>
-        <li> hosted a coordination for testing Ethereum switch to proof of stake
+    <ul class="ul-without-dots padding-top-2">
+        <li>
+            <p> built <a href=https://proofof.cat>Catropy</a>, a cat toy device for extracting secure entropy from felines used to secure cryptography in KZG ceremony</p>
         </li>
         <li>
+            <p> created the very first Bitcoin Lightning NFC payments and pioneered the technology</p>
+        </li>
+        <li><p> created an art installation from upcycled hardware and cartridges
+        </li>
+        <li><p> built Bleskomat, first offline Bitcoin Lightning ATM using LNURL and helped to onboard hundreds of people
+        </p>
+        </li>
+        <li><p> hosted FOSS software for the community, providing a privacy respecting alternative to proprietary services
+        </p>
+        </li>
+        <li><p> hosted nodes and tools for various blockchains, including mixers
+        </p>
+        </li>
+        <li><p> organized music events Synapse, hosting local artists and DJs
+        </p></li>
+        <li><p> hosted a coordination for testing Ethereum switch to proof of stake
+        </p></li>
+        <li><p>
             created an <a href="https://play.workadventu.re/_/global/bordel.github.io/workadvanture-bordel/map.json">online 2D hackerspace</a> to for events during covid and remotely
+        </p>
         </li>
-        <li> organized workshops on 3D printing and creative prototyping 
+        <li><p> organized workshops on 3D printing and creative prototyping
+        </p>
         </li>
-        <li> workshops on biology and sustainability, growing mycelium in the space
-        </li>
-        <li> workshops on neopixel, art with programmable LED lights
-        </li>
-        <li> Security/privacy workshops, installing GrapheneOS, GNU/Linux 
-        </li>
-        <li> workshop on hacking Playstation and liberating hardware
-        </li>
-        <li> organized non-conformist hackatons Hackatoshi's <a href=flyingcircuit.com>Flying Circuit</a>
-        </li>
-        <li> workshops on hacking self defense tools 
-        </li>
+        <li><p> workshops on biology and sustainability, growing mycelium in the space
+        </p></li>
+        <li><p> workshops on neopixel, art with programmable LED lights
+        </p></li>
+        <li><p> Security/privacy workshops, installing GrapheneOS, GNU/Linux
+        </p></li>
+        <li><p> workshop on hacking Playstation and liberating hardware
+        </p></li>
+        <li><p> organized non-conformist hackatons Hackatoshi's <a href=flyingcircuit.com>Flying Circuit</a>
+        </p></li>
+        <li><p> workshops on hacking self defense tools
+        </p></li>
 
     </ul>
 
@@ -170,26 +232,20 @@
         welcome everybody from all kinds of communities to join us and use the space.
     </p>
 
-    <h3 class="text-center">Get Involved!</h3>
-    <p>
-        If you're interested in what we do and want to contribute your skills, ideas, or resources, please reach out using the form below. We welcome everyone to join us in shaping the future of Bordel Hackerspace.
-    <p>
-    <br>
+    <h3 id="joinUs" class="text-center padding-top-8 font-color-green">Join us</h3>
     <p class="text-center">
-        Let’s create something amazing together!
-    </p>
-    
-    <p class="text-center">
-        To fund the new space, we are pioneering a decentralized crowdfunded loan! Learn more at <a href=https://cryptpad.cz/pad/#/2/pad/view/GxUis15v0eZuAbOFYpPIYSb+ZjEAS-nKdYBquz3-CPY>blog.bordel.wtf</a>
-    </p>
+        We are operating in private <a href="https://signal.group/#CjQKILd9jG3SmC5jEkCf0VbavrETuLixY7wxITmlkg8dWbdrEhD6qay9BKGWmjYLRFKFZjeB">signal group</a>. More info to come.
+    <p>
 
-    <center>
-    <h2 class="padding-top-2">
-        <a href=https://cryptpad.cz/form/#/2/form/view/yDFYVV0i6xp7IeaxJeP2duHvklaRR+u5wJz1WFqt3iA>Interest Form
-        </a>
-    </h2>
-
-    <a href="https://new.bordel.wtf/"> <img src="./bordel.png" alt="" style="width: 45%; height: auto;"> </a>
-    </center>
-
+    <div class="d-flex" style="justify-content: center">
+      <video controls width="250" class="text-center" style="margin: 2rem 0 2rem 0">
+        <source src="./assets/videos/videBordelCat.mp4" type="video/mp4" />
+        Download the
+        <a href="./assets/videos/videBordelCat.mp4">MP4</a>
+        video.
+      </video>
+    </div>
+<script src="script.js">
+</script>
+</div>
 </body>
